--- a/tpmlwebref_chat.htm
+++ b/tpmlwebref_chat.htm
@@ -81,10 +81,23 @@
                                         </div>
                                     </div>
                                     <br>
-                                    <div class="form_grp">
+                                    <div class="form_grp form_inline">
                                         <div class="labelEffect">
-                                            <input name="search_userid" id="search_userid" type="text" value="">
-                                            <label>請輸入常問問題關鍵字</label>
+                                            <select id="" name="" class="dynamicCol used">
+                                                <option value="" selected="" disabled="disabled">
+                                                </option>
+                                                <option value="0" selected>請選擇</option>
+                                                <option value="1">常問問題1</option>
+                                                <option value="2">常問問題2</option>
+                                                <option value="3">常問問題3</option>
+                                                <option value="4">常問問題4</option>
+                                                <option value="5">常問問題5</option>
+                                            </select>
+                                            <label>常問問題</label>
+                                        </div>
+                                        <div class="labelEffect">
+                                            <input name="" type="text" value="請輸入輸入的問題" class="dynamicCol used">
+                                            <label>輸入的問題</label>
                                         </div>
                                     </div>
                                     <br>
@@ -158,7 +171,6 @@
                                                     <option value="">100</option>
                                                 </select> 筆
                                             </div>
-                                            <input type="button" value="條件切換" title="條件切換" class="btn btn-submit">
                                         </form>
                                     </div>
                                     <div class="quick_btn">
