--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -219,6 +219,11 @@
                                         <li><a href="#">未處理</a></li>
                                         <li><a href="#">處理中</a></li>
                                         <li><a href="#">已結案</a></li>
+                                        <li><a href="#">無需處理</a></li>
+                                        <li><a href="#">送陳</a></li>
+                                        <li><a href="#">簽核</a></li>
+                                        <li><a href="#">修改</a></li>
+                                        <li><a href="#">退文</a></li>
                                     </ul>
                                     ｜處理結果：
                                     <ul>
@@ -280,7 +285,6 @@
                                                             <th class="text-left">處理階段</a>
                                                             </th>
                                                             <th>處理結果</th>
-                                                            <th>審核結果</th>
                                                             <th>
                                                                 <a href="#">回覆期限 <i class="i_sort"></i></a>
                                                             </th>
@@ -295,9 +299,8 @@
                                                             <td><a href="tpmlwebref_questionsearchnew.htm">您好：最近要預約書時發現：無法選擇圖書館（原有設定沒了，要求我選擇圖書館，但是沒有任何選項可選。判斷是有bug或我半夜是不允許操作？），所以這個選項，不論在預約下或在個人設定下，都沒有選項（圖書館list）。
                                                                     請協助處理。謝謝。</a></td>
                                                             <td>應用科學</td>
-                                                            <td><span class="green">未處理</span></td>
+                                                            <td><span class="blue">送陳</span></td>
                                                             <td><span class="green">未答覆</span></td>
-                                                            <td><span class="blue">通過</span></td>
                                                             <td><time>2024/5/15
                                                                     <br>下午18:09</time></td>
 
@@ -316,9 +319,9 @@
                                                                     href="tpmlwebref_questionsearchnew.htm">電腦網頁版預約書籍無法選擇取書館（下拉選單空白，也沒有自動代入預設取書館）導致預約無法完成</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="blue">處理中</span></td>
-                                                            <td><span class="blue">處理中</span></td>
-                                                            <td><span class="blue">通過</span></td>
+                                                            <td><span class="orange">處理中</span></td>
+                                                            <td><span class="orange">處理中</span></td>
+
                                                             <td><time>2024/5/15
                                                                     <br>下午17:09</time></td>
 
@@ -338,9 +341,9 @@
                                                                     謝謝</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="blue">處理中</span></td>
+                                                            <td><span class="gray">已結案</span></td>
                                                             <td><span class="gray">完全解答</span></td>
-                                                            <td><span class="red">不通過</span></td>
+
                                                             <td><time>2024/5/15
                                                                     <br>下午16:09</time></td>
 
@@ -372,9 +375,8 @@
                                                                     https://www.facebook.com/photo?fbid=644109052266009&set=a.603286406348274</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="gray">已經回覆(1天)</span></td>
-                                                            <td><span class="gray">已回覆</span></td>
-                                                            <td><span class="blue">通過</span></td>
+                                                            <td><span class="gray">已結案</span></td>
+                                                            <td><span class="gray">已回覆(1天)</span></td>
                                                             <td><time>2024/5/14
                                                                     <br>下午16:09</time></td>
 
@@ -389,44 +391,14 @@
                                                             <td class="num">995</td>
                                                             <td><time>2024/5/13
                                                                     <br>下午18:09</time></td>
-                                                            <td><a href="tpmlwebref_questionsearchnew.htm">★
-                                                                    館藏查詢系統
-                                                                    >
-                                                                    詳細資料頁 >
-                                                                    書目資料： 1)
-                                                                    若書目資料列數不多，未被隱藏，可否：無須出現「顯示更多」字樣？以避免展開後無隱藏內文之冏境
-                                                                    or
-                                                                    同「MARC格式」，未點選「顯示更多」前之末列文字呈現灰白色，以利分辨，再展開查看被隱藏之內文
-                                                                    2)
-                                                                    若「可預約數量=0」，可否同「查詢列表頁」：無須顯示「預約」功能紐？
-                                                                    以避免點選後，卻顯示「確定 & 取消 &
-                                                                    請勾選」之困擾， 若仍顯示預約紐，點選後是否應顯示「無法預約」？ 3)
-                                                                    當出版項之出版年，與同頁面MARC格式「008」之出版年，相異 ( 含不足4碼 ) or
-                                                                    其一未著錄出版年，
-                                                                    新系統能否稽核 & 提醒？館員如何避免失誤 & 疏漏？ 請查核原因 ( 避免 日後 重複
-                                                                    再次 出現 異常 ) 4)
-                                                                    相同ISBN之「增購」，是否無法沿用原先之書目資料？致兩筆之書目資料略有不同 ex.
-                                                                    主題、劃一題名 (
-                                                                    若合併於「舊」bookDetail編號之書目資料，增購「新」bookDetail編號
-                                                                    之書目資料無法代入？) 5)
-                                                                    套書編目之詳細資料頁，書目資料之相關欄位，可否顯示「已完結 or 完」？ ex.
-                                                                    HyRead ( Ebook
-                                                                    Taipei
-                                                                    )「查看系列」功能紐，可查看該系列書目，並顯示「已完結」https://tpml.ebook.hyread.com.tw/Template/RWD3.0/seriesbook.jsp?seriesID=2515
-                                                                    另，套書「詳細資料頁」之出版項，顯示出版年之「起訖年度」者，是否表示「已完結」？ex.
-                                                                    零的日常？
-                                                                    https://book.tpml.edu.tw/bookDetail/527488
-                                                                    但，如蝶翩翩
-                                                                    該套書已完結，卻未顯示「訖」年，
-                                                                    https://book.tpml.edu.tw/bookDetail/803948
-                                                                    或者，應該是問：套書「新冊別獨立編目」時，其出版項有出版年，為何合併於「舊」bookDetail編號之套書後，出版項無法顯示出版年之「訖」年？
-                                                                    謝謝 (17)
+                                                            <td><a href="tpmlwebref_questionsearchnew.htm">新書通報列表，新書月份選擇2022/11，語文別選擇中文：
+                                                                    1.「福特汽車叢書」之館藏資訊，其一未著錄「冊數/卷期」，請查核 2.
+                                                                    有數筆出版年為19xx之清單，請問：新書通報之「新書」定義為何？ 謝謝
                                                                 </a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="gray">已回覆(2天)</span></td>
+                                                            <td><span class="gray">無需處理</span></td>
                                                             <td><span class="gray">無法解答</span></td>
-                                                            <td><span class="blue">通過</span></td>
                                                             <td><time>2024/5/13
                                                                     <br>下午16:09</time></td>
 
@@ -448,9 +420,9 @@
                                                                     https://www-ws.gov.taipei/001/Upload/430/relfile/41383/7541217/d9145fe6-9b88-4ecc-a768-e6c8a50a9d3f.pdf</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="gray">已回覆(2天)</span></td>
+                                                            <td><span class="gray">修改</span></td>
                                                             <td><span class="gray">指引使用方式</span></td>
-                                                            <td><span class="blue">通過</span></td>
+
                                                             <td><time>2024/5/13
                                                                     <br>下午16:09</time></td>
 
@@ -470,9 +442,8 @@
                                                                     有數筆出版年為19xx之清單，請問：新書通報之「新書」定義為何？ 謝謝</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="gray">已回覆(3天)</span></td>
+                                                            <td><span class="gray">無需處理</span></td>
                                                             <td><span class="gray">不予處理</span></td>
-                                                            <td><span class="blue">通過</span></td>
                                                             <td><time>2024/5/13
                                                                     <br>下午16:09</time></td>
 
@@ -493,9 +464,8 @@
                                                                     謝謝!</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="gray">已回覆(3天)</span></td>
+                                                            <td><span class="green">簽核</span></td>
                                                             <td><span class="gray">轉介</span></td>
-                                                            <td><span class="blue">通過</span></td>
                                                             <td><time>2024/5/14
                                                                     <br>下午16:09</time></td>
 
@@ -514,9 +484,9 @@
                                                                     href="tpmlwebref_questionsearchnew.htm">請問圖書館的網址https://tpml.gov.taipei/，其中的TPML是什麼的縮寫呢？T是taipei，P是public，L是library，請問M是什麼？</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="gray">已回覆(5天)</span></td>
+                                                            <td><span class="red">退文</span></td>
                                                             <td><span class="gray">轉介</span></td>
-                                                            <td><span class="blue">通過</span></td>
+
                                                             <td><time>2024/5/14
                                                                     <br>下午16:09</time></td>
                                                             <td>
@@ -535,9 +505,8 @@
                                                                     謝謝</a>
                                                             </td>
                                                             <td>應用科學</td>
-                                                            <td><span class="gray">已回覆(5天)</span></td>
+                                                            <td><span class="gray">修改</span></td>
                                                             <td><span class="gray">轉介</span></td>
-                                                            <td><span class="blue">通過</span></td>
                                                             <td><time>2024/5/14
                                                                     <br>下午16:09</time></td>
                                                             <td>
