--- a/tpmlwebref_review.htm
+++ b/tpmlwebref_review.htm
@@ -122,11 +122,12 @@
                                 </div>
                                 <div class="_head">
                                     <div class="tag">
-                                        審核狀態：
+                                        審核階段：
                                         <ul>
-                                            <li class="active"><a href="#">審核通過</a></li>
-                                            <li><a href="#">審核不公過</a></li>
-
+                                            <li class="active"><a href="#">送陳</a></li>
+                                            <li><a href="#">簽核</a></li>
+                                            <li><a href="#">修改</a></li>
+                                            <li><a href="#">退文</a></li>
                                         </ul>
                                     </div>
 
@@ -173,7 +174,7 @@
 
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="red">待審核</span></td>
+                                                    <td><span class="red">退文</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -190,7 +191,7 @@
 
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="blue">審核通過</span></td>
+                                                    <td><span class="blue">送陳</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -207,7 +208,7 @@
 
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="green">審核不通過</span></td>
+                                                    <td><span class="green">簽核</span></td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -224,7 +225,7 @@
 
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="green">審核不通過</span></td>
+                                                    <td><span class="gray">修改</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -241,7 +242,7 @@
 
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="green">審核不通過</span></td>
+                                                    <td><span class="gray">修改</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
