--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -205,7 +205,7 @@
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
-                                            <div class="form_title">狀態<abbr>*</abbr></div>待審核
+                                            <div class="form_title">狀態<abbr>*</abbr></div>修改
                                             <div class="form_content">
 
                                             </div>
