--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -129,7 +129,7 @@
                                                                 
 本館線上參考問題，將定期維護：關於個人借閱問題，僅保留1個月即自系統上刪除。 
 臺北市立圖書館 諮詢服務課 敬復 </textarea>
-                                                            <label for="userId">答案<abbr></abbr></label>
+                                                            <label for="userId">回覆答案<abbr></abbr></label>
                                                         </div>
                                                         <div class="help">輸入回覆的內容將顯示於前台(字數200/500)</div>
                                                     </div>
@@ -293,6 +293,13 @@
                                                             <input name="" type="text" value="自動帶入館員姓名" disabled>
                                                             <label>回覆人員</label>
                                                         </div>
+                                                    </div>
+                                                    <div class="form_grp">
+                                                        <div class="labelEffect">
+                                                            <textarea>請輸入意見</textarea>
+                                                            <label for="userId">陳核之審核意見<abbr></abbr></label>
+                                                        </div>
+                                                        <div class="help">輸入回覆的內容將顯示於前台留言板(字數200/500)</div>
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
@@ -472,8 +479,7 @@
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
-                                            <div class="form_title">狀態*已回覆</div>
-                                            <div>回覆時間 2024/5/14下午18:09</div>
+                                            <div class="form_title">狀態*處理中</div>
                                             <div class="form_content">
                                             </div>
                                         </div>
