--- a/tpmlwebref_referrals.htm
+++ b/tpmlwebref_referrals.htm
@@ -125,9 +125,8 @@
                                         回覆狀態：
                                         <ul>
                                             <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">待答覆</a></li>
-                                            <li><a href="#">未答覆</a></li>
-                                            <li><a href="#">已回覆</a></li>
+                                            <li><a href="#">退文</a></li>
+                                            <li><a href="#">處理中</a></li>
                                         </ul>
                                         </ul>
                                     </div>
@@ -175,7 +174,7 @@
                                                     <td><time>2024/11/15 <br>下午18:09</time></time></td>
                                                     <td>秘書室</td>
                                                     <td>陳館員</td>
-                                                    <td><span class="red">待答覆</span></td>
+                                                    <td><span class="red">退文</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -192,7 +191,7 @@
                                                     <td><time>2024/11/15 <br>下午18:09</time></time></td>
                                                     <td>兒童室</td>
                                                     <td>陳館員</td>
-                                                    <td><span class="orange">未答覆</span></td>
+                                                    <td><span class="orange">處理中</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -209,7 +208,7 @@
                                                     <td><time>2024/11/15 <br>下午18:09</time></time></td>
                                                     <td>閱覽課</td>
                                                     <td>廖館員</td>
-                                                    <td><span class="gray">已回覆</span></td>
+                                                    <td><span class="orange">處理中</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -225,7 +224,7 @@
                                                     <td><time>2024/11/15 <br>下午18:09</time></time></td>
                                                     <td>閱覽課</td>
                                                     <td>李館員</td>
-                                                    <td><span class="gray">已回覆</span></td>
+                                                    <td><span class="orange">處理中</span></td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -241,7 +240,7 @@
                                                     <td><time>2024/11/15 <br>下午18:09</time></time></td>
                                                     <td>閱覽課</td>
                                                     <td>林館員</td>
-                                                    <td><span class="gray">已回覆</span></td>
+                                                    <td><span class="orange">處理中</span></td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
