--- a/tpmlwebref_referralsedit.htm
+++ b/tpmlwebref_referralsedit.htm
@@ -129,9 +129,9 @@
                                                                 
 本館線上參考問題，將定期維護：關於個人借閱問題，僅保留1個月即自系統上刪除。 
 臺北市立圖書館 諮詢服務課 敬復 </textarea>
-                                                            <label for="userId">答案<abbr></abbr></label>
+                                                            <label for="userId">回覆答案<abbr></abbr></label>
                                                         </div>
-                                                        <div class="help">輸入回覆的內容將顯示於前台留言板(字數200/500)</div>
+                                                        <div class="help">回覆內容將顯示於前台留言板(字數200/500)</div>
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
@@ -213,7 +213,7 @@
                                                                 <option value="3">電話</option>
                                                                 <option value="3">全部</option>
                                                             </select>
-                                                            <label>回覆方式(改成check box 複選)</label>
+                                                            <label>回覆方式(改成複選)</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
@@ -286,6 +286,14 @@
                                                             <label>回覆人員</label>
                                                         </div>
                                                     </div>
+                                                    <div class="form_grp">
+                                                        <div class="labelEffect">
+                                                            <textarea>請輸入意見</textarea>
+                                                            <label for="userId">陳核之審核意見<abbr></abbr></label>
+                                                        </div>
+                                                        <div class="help">輸入回覆的內容將顯示於前台留言板(字數200/500)</div>
+                                                    </div>
+
                                                     <div class="labelEffect">
                                                     </div>
                                                 </div>
@@ -469,10 +477,6 @@
                                     <div class="btn_grp">
                                         <a href="tpmlwebref_questionsearchnewemail1.htm" class="btn btn-green">暫存</a>
                                         <a href="tpmlwebref_questionsearchnewemail1.htm" class="btn btn-orange">陳核信件</a>
-                                    </div>
-                                    <div class="btn_grp">
-
-                                        <a href="tpmlwebref_questionsearchnewemail3.htm" class="btn btn-blue">回信讀者</a>
                                     </div>
                                 </div>
                                 <div class="block">
