--- a/tpmlwebref_review.htm
+++ b/tpmlwebref_review.htm
@@ -126,7 +126,6 @@
                                         <ul>
                                             <li class="active"><a href="#">送陳</a></li>
                                             <li><a href="#">簽核</a></li>
-                                            <li><a href="#">修改</a></li>
                                             <li><a href="#">退文</a></li>
                                         </ul>
                                     </div>
@@ -225,7 +224,7 @@
 
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">送陳</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -242,7 +241,7 @@
 
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">送陳</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
