--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -92,9 +92,13 @@
                                                     </div>
                                                     <div class="form_grp" style="margin-bottom:50px;">
                                                         <div class="labelEffect">
-                                                            <textarea
-                                                                class="used">主管您好：請至後台線上參考服務案中審核維護管理進行審查999案件，該案件處理結果擬不予處理/擬完全解答/無法解答/處理中/指引使用方式/轉介，謝謝。</textarea>
-                                                            <label>主管審核通知信(不可編修)</label>
+                                                            <textarea class="used">親愛的讀者您好：
+關於您的問題，因涉及學術研究之資料索取，請參考本館相關規定（首頁>常見問答>使用規定>臺北市立圖書館協助研究及資料申請須知https://tpml.gov.taipei/News_toggle.aspx?n=B64082F5678B94B1&sms=D0034AF4F8239B65），如就使用規定需進一步說明，歡迎來電本館諮詢服務課(02)2755-2823分機2301，由館員為您服務，謝謝。
+                                                                
+本館線上參考問題，將定期維護：關於個人借閱問題，僅保留1個月即自系統上刪除。
+                                                                
+                                                                臺北市立圖書館 諮詢服務課 敬復</textarea>
+                                                            <label>承辦回覆答案</label>
                                                         </div>
                                                         <div class="help">字數200/500</div>
                                                     </div>
@@ -205,7 +209,7 @@
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
-                                            <div class="form_title">狀態<abbr>*</abbr></div>修改
+                                            <div class="form_title">狀態<abbr>*</abbr></div>簽核
                                             <div class="form_content">
 
                                             </div>
