--- a/tpmlwebref_questionsearch1.htm
+++ b/tpmlwebref_questionsearch1.htm
@@ -225,7 +225,8 @@
                                         <li><a href="#">修改</a></li>
                                         <li><a href="#">退文</a></li>
                                     </ul>
-                                    ｜處理結果：
+                                    <br>
+                                    處理結果：
                                     <ul>
                                         <li class="active"><a href="#">全部</a></li>
                                         <li><a href="#">已回覆</a></li>
